# arduino_uno_r4_minima_rs_testing

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config.toml
.github/workflows/: ci_checks.yml
src/: main.rs
